[gd_scene load_steps=11 format=2]

[ext_resource path="res://script/UI/SelectTitle/SelectTitle.gd" type="Script" id=1]
[ext_resource path="res://src/img/UI/SelectTitle/lava.png" type="Texture" id=2]
[ext_resource path="res://src/img/UI/SelectTitle/grass.png" type="Texture" id=3]
[ext_resource path="res://src/img/UI/SelectTitle/desert.png" type="Texture" id=4]
[ext_resource path="res://src/img/UI/SelectTitle/snow.png" type="Texture" id=5]
[ext_resource path="res://src/img/UI/SelectTitle/forest.png" type="Texture" id=6]
[ext_resource path="res://src/img/UI/SelectTitle/sea.png" type="Texture" id=7]
[ext_resource path="res://src/img/UI/SelectTitle/SelectTitleBackground.png" type="Texture" id=8]
[ext_resource path="res://src/img/UI/SelectTitle/backicon.png" type="Texture" id=9]
[ext_resource path="res://src/img/UI/SelectTitle/SelectTitle.png" type="Texture" id=10]

[node name="SelectTitle" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="ColorRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 640.0
texture = ExtResource( 8 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -256.0
margin_top = 88.0
margin_right = 256.0
margin_bottom = 184.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_right = 512.0
margin_bottom = 640.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 64.0
size_flags_horizontal = 7
size_flags_vertical = 2

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
size_flags_horizontal = 2
size_flags_vertical = 6
texture_normal = ExtResource( 9 )

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 1024.0
margin_right = 1024.0
margin_bottom = 64.0

[node name="World123" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 214.0
margin_right = 1024.0
margin_bottom = 425.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="World1" type="TextureButton" parent="VBoxContainer/World123"]
margin_left = 115.0
margin_top = 51.0
margin_right = 223.0
margin_bottom = 159.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 3 )

[node name="World2" type="TextureButton" parent="VBoxContainer/World123"]
margin_left = 457.0
margin_top = 51.0
margin_right = 565.0
margin_bottom = 159.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 6 )

[node name="World3" type="TextureButton" parent="VBoxContainer/World123"]
margin_left = 800.0
margin_top = 51.0
margin_right = 908.0
margin_bottom = 159.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 4 )

[node name="World456" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 429.0
margin_right = 1024.0
margin_bottom = 640.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="world4" type="TextureButton" parent="VBoxContainer/World456"]
margin_left = 115.0
margin_top = 51.0
margin_right = 223.0
margin_bottom = 159.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 2 )

[node name="world5" type="TextureButton" parent="VBoxContainer/World456"]
margin_left = 457.0
margin_top = 51.0
margin_right = 565.0
margin_bottom = 159.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 5 )

[node name="world6" type="TextureButton" parent="VBoxContainer/World456"]
margin_left = 800.0
margin_top = 51.0
margin_right = 908.0
margin_bottom = 159.0
size_flags_horizontal = 6
size_flags_vertical = 6
texture_normal = ExtResource( 7 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="VBoxContainer/World123/World1" to="." method="_on_World1_pressed"]
[connection signal="pressed" from="VBoxContainer/World123/World2" to="." method="_on_World2_pressed"]
[connection signal="pressed" from="VBoxContainer/World123/World3" to="." method="_on_World3_pressed"]
[connection signal="pressed" from="VBoxContainer/World456/world4" to="." method="_on_world4_pressed"]
[connection signal="pressed" from="VBoxContainer/World456/world5" to="." method="_on_world5_pressed"]
[connection signal="pressed" from="VBoxContainer/World456/world6" to="." method="_on_world6_pressed"]
